# tex_preprocessor

./: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Defines.cpp  Defines.h  Error.cpp  Error.h  FileHandler.cpp  FileHandler.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Value.cpp  Value.h  basic_HM.cpp  basic_HM.h  clear_and_build.sh  main.cpp  run_tests.sh
docs/: preproc.tex
